# demo

./: .gitignore  API_TEST_GUIDE.md  FRONTEND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PRIVATE_CHANNEL_MEMBER_PLAN.md  README.md  TODO.md  main.py  pyproject.toml  test_password_reset.md
ai/: chatroom_expansion_plan.md  global_time_handling.md  message_history_api.md
backend/: .env  .env.example  CLAUDE.md  check_online_status.py  config.py  cookies.txt  init_default_data.py  manual_reset.py  migrate_channel_members.py  pyproject.toml  requirements_channel_members.txt  run.py  setup_permissions.py  test_jwt.py
backend/ai/: README.md  plan.md
backend/app/: __init__.py  admin.py  apis.py  auth.py  auth_api.py  base_views.py  channel_member_api.py  chatroom.py  hooks.py  i18n.py  message.py  models.py  private_message.py  register_api.py  security_apis.py  socketio_server.py  test_api.py  time_utils.py  user_api.py  views.py
backend/app/templates/: index.html
backend/app/translations/: en.json  ja.json  zh.json
backend/docs/: CURRENT_API_IMPLEMENTATION.md  FLASK_APPBUILDER_AUTH_ANALYSIS.md  SECURITY_IMPROVEMENTS.md  WHY_USE_SELFJWT.md
front/: .env.example  nuxt.config.ts  package-lock.json  package.json
front/ai/: nuxt-config-guide.md  plan.md
front/composables/: useAuth.ts  useChat.ts  useRecaptchaToken.ts
front/layouts/: default.vue
front/middleware/: auth.ts
front/pages/: debug-auth.vue  forgot-password.vue  index.vue  login.vue  register.vue  (+1 more)
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
(+43 files in other folders)
